# bgengine

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/engine/: CMakeLists.txt  bgenginecontroller.cpp  bgenginecontroller.h
src/engine/qml/: BgEngineView.qml  MediaLayer.qml  NoiseTexture.qml  ShaderSurface.qml
src/engine/shaders/: fullscreen.vert  postprocess.frag  shadertoy.frag
src/preview/: CMakeLists.txt  main.cpp  previewapplier.cpp  previewapplier.h
src/preview/qml/: Main.qml
wallpapers/: CMakeLists.txt  VanGogh.frag  blackhole.frag
wallpapers/org.brtcrt.bgengine/: CMakeLists.txt  metadata.json.in
wallpapers/org.brtcrt.bgengine/contents/config/: main.xml
wallpapers/org.brtcrt.bgengine/contents/ui/: config.qml  main.qml
